# poc-ddd-python

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/domain/models/book/: book.py  test_book.py
src/domain/models/book/author/: author.py  test_author.py
src/domain/models/book/bookId/: book_id.py  test_book_id.py
src/domain/models/book/book_identity/: book_identity.py  test_book_identity.py
src/domain/models/book/price/: price.py  test_price.py
src/domain/models/book/title/: test_title.py  title.py
src/domain/models/common/: value_object.py
src/domain/models/common/book/bookId/: book_id.py
