[project]
name = "poc-ddd-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
strict = true
explicit_package_bases = true
warn_unused_configs = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src"]
python_files = ["test_*.py"]
